--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@
 
 .res-card {
     border: 1px solid rgb(26, 24, 24);
-    width: 220px;
+    width: 250px;
     margin: 5px;
     background-color: rgb(225, 222, 225);
     row-gap: 5px;
@@ -55,4 +55,9 @@
     flex-wrap: wrap;
     justify-content:flex-start;
     margin: 10px;
+}
+
+.filter-btn{
+    margin: 15px;
+    cursor: pointer;
 }
